--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -21,6 +21,11 @@
                         <Frame HeightRequest="125" 
                                Padding="0"
                                Style="{StaticResource CardView}">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer 
+                                    CommandParameter="{Binding .}"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}"/>
+                            </Frame.GestureRecognizers>
                             <Grid Padding="0"
                                   ColumnDefinitions="125, *">
                                 <Image Aspect="AspectFill"
@@ -45,6 +50,7 @@
                 Command="{Binding GetMonkeyCommand}" 
                 IsEnabled="{Binding IsNotBusy}" 
                 Grid.Row="1" 
+                Grid.Column="0" 
                 Margin="8"/>
 
         <ActivityIndicator IsVisible="{Binding IsBusy}" 
